# mergekitty

./: CHANGELOG.md  CLAUDE.md  NOTES.md  README.md  notebook.ipynb  pyproject.toml
.github/workflows/: pre-commit.yml
docs/: create_a_merge_method.md  moe.md
mergekit/: card.py  config.py  merge.py  plan.py  task.py
mergekit/executor/: __init__.py  single_threaded.py
mergekit/io/: tasks.py
mergekit/merge_methods/: base.py  easy_define.py  generalized_task_arithmetic.py  linear.py  model_stock.py  nearswap.py  nuslerp.py  passthrough.py  sce.py
mergekit/tokenizer/: build.py  embed.py
mergekitty/: architecture.py  card.py  common.py  config.py  custom_task.py  merge.py  options.py  plan.py  sparsify.py  task.py
mergekitty/_data/architectures/: apertus.json  gemma3.json  glm4.json  ministral3.json  mistral3.json  mixtral.json  olmoe.json  qwen2vl.json  qwen3.json  qwen3_5.json  qwen3moe.json
mergekitty/executor/: __init__.py  _base.py  multi_threaded.py  parallelism.py  single_threaded.py
mergekitty/io/: __init__.py  lazy_tensor_loader.py  lazy_unpickle.py  loader.py  tasks.py  tensor_writer.py
mergekitty/merge_methods/: __init__.py  base.py  easy_define.py  fourier_slerp.py  generalized_task_arithmetic.py  linear.py  model_stock.py  multislerp.py  nearswap.py  nuslerp.py  passthrough.py  rectify_embed.py  registry.py  sce.py
mergekitty/moe/: __init__.py  arch.py  common.py  config.py  deepseek.py  mixtral.py  qwen.py  router.py
mergekitty/scripts/: extract_lora.py  gui.py  layershuffle.py  megamerge.py  merge_lora.py  moe.py  run_yaml.py  tokensurgeon.py
mergekitty/scripts/ABM/: activations_based_merge.py  extract_activations.py  extract_permutation_matrices.py
mergekitty/tokenizer/: __init__.py  build.py  config.py  embed.py
tests/: common.py  test_architecture.py  test_basic_merges.py  test_chat_template.py  test_cli_options.py  test_graph.py  test_gui.py  test_io.py  test_lazy_tensor_loader.py  test_lazy_unpickle.py  test_merge_lora.py  test_modelref.py  test_moe_merges.py  test_sparsify.py  test_tokenizer.py
